[sej] 홀리나우 기본 css 설정

--- a/HoliDiary/.settings/org.eclipse.core.resources.prefs
+++ b/HoliDiary/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/views/mj_map/map.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/sej_holinow/holinow.jsp=UTF-8
